Details: Changed icon used for Install Directory

--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -211,7 +211,7 @@
 
                                                 <Label Name="PART_ElemInstallDirectory" >
                                                     <StackPanel Orientation="Horizontal">
-                                                        <TextBlock Text="&#xef43;" Style="{DynamicResource Icon}" />
+                                                        <TextBlock Text="&#xEC5B;" Style="{DynamicResource Icon}" />
                                                         <TextBlock Text="{DynamicResource LOCGameInstallDirTitle}" />
                                                     </StackPanel>
                                                 </Label>
