--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -169,7 +169,7 @@
                                                            Cursor="Hand"
                                                            FontWeight="Bold" FontSize="{DynamicResource FontSizeLarge}" />
                                             </Expander.Header>
-                                            <StackPanel DockPanel.Dock="Top" Margin="5,0,0,25">
+                                            <StackPanel Margin="0,0,0,25">
                                                 <StackPanel.Resources>
                                                     <Style TargetType="ItemsControl">
                                                         <Setter Property="VerticalAlignment" Value="Center" />
@@ -394,7 +394,8 @@
                                         </Expander>
                                         
                                         <!--#region ExtraMetadataLoader Video Control-->
-                                        <TextBlock x:Name="VideoFeedVisibilityProxy">
+                                        <TextBlock x:Name="VideoFeedVisibilityProxy"
+                                                   Grid.Row="{DynamicResource GridViewSectionOrderVideo}">
                                             <TextBlock.Style>
                                                 <Style TargetType="TextBlock">
                                                     <Setter Property="Visibility" Value="Visible" />
@@ -640,7 +641,7 @@
                                             </Expander.Header>
                                             <StackPanel Margin="0,0,0,25">
                                                 <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
-                                                <ContentControl x:Name="NewsViewer_NewsViewerControl" />
+                                                <ContentControl x:Name="NewsViewer_NewsViewerControl" Margin="0,0,10,0" />
                                             </StackPanel>
                                         </Expander>
                                         <!--#endregion -->
