--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -453,6 +453,15 @@
                                                         <ScrollViewer Height="{Binding ElementName=ContainerHeightBorder, Path=ActualHeight}" VerticalScrollBarVisibility="Disabled"
                                                                   HorizontalScrollBarVisibility="Auto">
                                                             <DockPanel>
+                                                                <DockPanel.Resources>
+                                                                    <Style TargetType="ItemsControl">
+                                                                        <Setter Property="HorizontalAlignment" Value="Left" />
+                                                                    </Style>
+                                                                    <Style TargetType="Button" BasedOn="{StaticResource PropertyItemButton}">
+                                                                        <Setter Property="Background" Value="Transparent" />
+                                                                        <Setter Property="VerticalAlignment" Value="Center" />
+                                                                    </Style>
+                                                                </DockPanel.Resources>
                                                                 <ScrollViewer Name="PART_ElemDescription" Tag="{DynamicResource DetailsViewDescriptionDockToRight}"
                                                                               Width="{DynamicResource DetailsViewDescriptionWidth}" Margin="0,0,15,0">
                                                                     <ScrollViewer.Style>
@@ -482,12 +491,6 @@
 
                                                                 <ScrollViewer Margin="15,0,0,0" DockPanel.Dock="Left">
                                                                     <GridEx ColumnCount="2" AutoLayoutColumns="2" RowCount="7">
-                                                                        <GridEx.Resources>
-                                                                            <Style TargetType="Button" BasedOn="{StaticResource PropertyItemButton}">
-                                                                                <Setter Property="Background" Value="Transparent" />
-                                                                                <Setter Property="VerticalAlignment" Value="Center" />
-                                                                            </Style>
-                                                                        </GridEx.Resources>
                                                                         <Label Name="PART_ElemRecentActivity" Content="{DynamicResource LOCRecentActivityLabel}" />
                                                                         <TextBlock Name="PART_TextRecentActivity" Style="{DynamicResource BaseTextBlockStyle}" VerticalAlignment="Center" />
                                                                         <Label Name="PART_ElemLibrary" Content="{DynamicResource LOCGameProviderTitle}" />
@@ -506,10 +509,6 @@
                                                                 </ScrollViewer>
                                                                 <ScrollViewer Margin="15,0,0,0" DockPanel.Dock="Left">
                                                                     <GridEx ColumnCount="2" AutoLayoutColumns="2" RowCount="9">
-                                                                        <GridEx.Resources>
-                                                                            <Style TargetType="Button" BasedOn="{StaticResource PropertyItemButton}" />
-                                                                        </GridEx.Resources>
-
                                                                         <Label Name="PART_ElemInstallSize" Content="{DynamicResource LOCInstallSizeLabel}" />
                                                                         <TextBlock Name="PART_TextInstallSize" Style="{DynamicResource BaseTextBlockStyle}" VerticalAlignment="Center" />
                                                                         
