--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -126,7 +126,8 @@
                                     <Button Name="PART_ButtonMoreActions" Style="{DynamicResource MoreActionsButton}"/>
 
                                     <DockPanel DockPanel.Dock="Right" HorizontalAlignment="Right" LastChildFill="False" Grid.Column="2" VerticalAlignment="Center" Margin="20,0,5,0">
-                                        <ContentControl x:Name="PlayState_GameStateSwitchControl" Margin="10,0,0,0">
+                                        <ContentControl x:Name="PlayState_GameStateSwitchControl" Margin="10,0,0,0"
+                                                        Visibility="{PluginSettings Plugin=PlayState, Path=IsControlVisible, FallbackValue=Collapsed, Converter={StaticResource BooleanToVisibilityConverter}}">
                                             <ContentControl.Resources>
                                                 <Style TargetType="Button" BasedOn="{StaticResource DetailsSemiTransparentButton}" >
                                                     <Setter Property="Width" Value="32" />
