DetailsView: Fix details section not being visible if cover height is configured to 0

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -405,8 +405,9 @@
                                                                 <Setter Property="VerticalAlignment" Value="Top" />
                                                             </Style>
                                                         </DockPanel.Resources>
-                                                        <Border DockPanel.Dock="Left" Name="ContainerHeightBorder" Height="{Settings GameDetailsCoverHeight}"/>
-
+                                                        <Border DockPanel.Dock="Left" Name="ContainerHeightBorder"
+                                                                Height="{Settings GameDetailsCoverHeight}" MinHeight="150"/>
+                                                        
                                                         <Border>
                                                             <Border.Style>
                                                                 <Style TargetType="Border">
